@@ -71,7 +71,7 @@ def run_tests():
                  if (entry.startswith('test_') and entry.endswith('.py'))]
         files.sort()
 
-    WIDTH = 60
+    WIDTH = 70
 
     print >>sys.stderr, 'Pygments Test Suite running, stand by...'.center(WIDTH)
     print >>sys.stderr, ('(using Python %s)' % sys.version.split()[0]).center(WIDTH)
